<resources>
    <string name="app_name">Beicon</string>
    <string name="name">Nombre</string>
    <string name="lastname">Apellido</string>
    <string name="phone">Teléfono</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="city">Ciudad</string>
    <string name="address">Dirección</string>
    <string name="floor">Piso</string>
    <string name="floor_number">Número de depto</string>
    <string name="cancel">Cancelar</string>
    <string name="modify">Modificar</string>
    <string name="total">Total: $%1$s</string>
    <string name="delete">Eliminar</string>
    <string name="login_forgot_password">Olvidó su contraseña?</string>
    <string name="login_entry">INGRESAR</string>
    <string name="login_entry_google">INGRESAR CON GOOGLE</string>
    <string name="login_are_new">Eres nuevo?</string>
    <string name="login_create_account">Crear cuenta</string>
    <string name="login_incorrect_credentials">Credenciales incorrectas</string>
    <string name="login_enter_credentials">Ingresa las credenciales</string>
    <string name="login_enter_email">Ingresa el email</string>
    <string name="login_enter_password">Ingresa la contraseña</string>
    <string name="signup_confirm_password">Confirmar contraseña</string>
    <string name="signup_terms_and_condition">Aceptar términos y condiciones</string>
    <string name="signup_finish_register">Finalizar registro</string>
    <string name="signup_have_account">Ya tienes una cuenta?</string>
    <string name="signup_go_login">Iniciar sesión</string>
    <string name="signup_name_no_valid">Debe contener al menos 4 caracteres</string>
    <string name="signup_phone_no_valid">Debe contener 10 dígitos</string>
    <string name="signup_email_no_valid">El email no es válido</string>
    <string name="signup_password_no_valid">Debe contener al menos 8 caracteres</string>
    <string name="signup_confirm_password_no_valid">Las contraseñas no coinciden</string>
    <string name="signup_fields_no_valid">Por favor, completá todo los campos</string>
    <string name="signup_terms_no_valid">Por favor, aceptá los términos y condiciones</string>
    <string name="signup_email_exist">El email ya existe</string>
    <string name="drawer_home">Menú principal</string>
    <string name="drawer_profile">Mi perfil</string>
    <string name="drawer_my_coupons">Mis cupones</string>
    <string name="drawer_my_reservations">Mis reservas</string>
    <string name="drawer_my_orders">Mis pedidos</string>
    <string name="drawer_my_payment_methods">Medios de pago</string>
    <string name="drawer_stores">Tiendas</string>
    <string name="drawer_close">Cerrar Sesión</string>
    <string name="home_recommendations">Recomendaciones</string>
    <string name="home_promotions">Promociones</string>
    <string name="home_new_order">Realizar pedido</string>
    <string name="home_reservation_add">Realizar reserva</string>
    <string name="home_no_wpp">WhatsApp no está instalado</string>
    <string name="reservations_new">Nueva reserva</string>
    <string name="reservations_day">Día</string>
    <string name="reservations_hour">Hora</string>
    <string name="reservations_places">Lugares</string>
    <string name="reservations_save">Confirmar reserva</string>
    <string name="reservations_places_two">2 lugares</string>
    <string name="reservations_places_four">4 lugares</string>
    <string name="reservations_places_six">6 lugares</string>
    <string name="reservations_places_eight">8 lugares</string>
    <string name="reservations_places_more_eight">Más de 8 lugares</string>
    <string name="reservations_day_not_valid">Por favor, selecciona un día válido</string>
    <string name="reservations_select_city">Selecciona una localidad</string>
    <string name="reservations_hours_one">19.00 hs</string>
    <string name="reservations_hours_two">20.00 hs</string>
    <string name="reservations_hours_three">21.00 hs</string>
    <string name="reservations_hours_four">22.00 hs</string>
    <string name="reservations_hours_five">23.00 hs</string>
    <string name="reservations_hours_six">00.00 hs</string>
    <string name="reservations_hours_seven">01.00 hs</string>
    <string name="reservations_dialog">¿Estas seguro que deseas realizar la reserva?</string>
    <string name="reservations_ok">Reserva realizada con éxito</string>
    <string name="reservations_empty">En este momento no tienes ninguna reserva agendada. Realiza una para asegurar tu lugar y pasar un excelente momento en nuestras mesas</string>
    <string name="reservations_address_vdd">San Martin 194</string>
    <string name="reservations_address_rio">Uruguay 50</string>
    <string name="reservations_loading">Aguarda un instante por favor</string>
    <string name="reservations_delete">¿Deseras cancelar la reserva?</string>
    <string name="reservations_delete_ok">Reserva cancelada con éxito</string>
    <string name="reservations_not_delete">Se necesita un día de anticipación</string>
    <string name="reservations_cancel">Cancelar reserva</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_name">%1$s %2$s</string>
    <string name="nav_header_email">android.studio@android.com</string>
    <string name="coupons">Lo quiero!</string>
    <string name="coupons_not_expire">Sin fecha de caducidad</string>
    <string name="coupons_no_coupon">En este momento, no tenemos cupones disponibles para ofrecerte. Estate atento a nuestras notificaciones y noticias, que en cualquier momento llegan!</string>
    <string name="coupons_understood">Entendido</string>
    <string name="coupons_code">Código del cupón</string>
    <string name="coupons_copy_code">Cupón copiado en el portapapeles</string>
    <string name="orders_product_quantity">x %1$d</string>
    <string name="hamburger_title">Hamburguesa</string>
    <string name="profile_rio_tercero">Río Tercero</string>
    <string name="profile_almafuerte">Almafuerte</string>
    <string name="profile_villa_del_dique">Villa del Dique</string>
    <string name="profile_save_changes">Guardar cambios</string>
    <string name="profile_disabled_notifications">Deseas desactivar las notificaciones?</string>
    <string name="profile_error_address">Debe contener al menos 6 caracteres</string>
    <string name="profile_no_changes">No se ha realizado ninguna modificación</string>
    <string name="profile_changes_successful">Cambios realizados con éxito</string>
    <string name="payment_methods_card_number">Número de tarjeta</string>
    <string name="payment_methods_titular_name">Nombre del titular</string>
    <string name="payment_methods_card_cvv">Cvv</string>
    <string name="payment_methods_confirm_card">Confirmar medio de pago</string>
    <string name="add_payment_methods_error">Debe contener 16 caracteres</string>
    <string name="add_payment_methods_error_since">Mes/Año</string>
    <string name="add_payment_methods_error_card_number">Tarjeta no apta para pagar</string>
    <string name="add_payment_methods_error_card_duplicated">Tarjeta ya añadida a la app</string>
    <string name="add_payment_methods_error_card_name">Debe contener al menos 8 caracteres</string>
    <string name="add_payment_methods_error_card_cvv">Debe contener 3 caracteres</string>
    <string name="add_payment_methods_card_success">Medio de pago añadido con éxito</string>
    <string name="add_payment_methods_wait_a_moment">¡Aguarda un instante!</string>
    <string name="add_payment_methods_card_validating">Estamos validando los datos de la tarjeta</string>
    <string name="add_payment_methods_card_data_error">Datos incorrectos</string>
    <string name="add_payment_methods_empty">No tenés medios de pagos almacenados, guardá tus tarjetas y hacé tus pedidos desde la app</string>
    <string name="payment_method_add">Añadir nuevo medio de pago</string>
    <string name="payment_method_since">Desde</string>
    <string name="payment_method_until">Hasta</string>
    <string name="stores_days">Días:</string>
    <string name="stores_schedules">Horarios:</string>
    <string name="stores_address">Dirección:</string>
    <string name="stores_phone">Teléfono:</string>
    <string name="stores_only_shipments">¡Solo para llevar!</string>
    <string name="cart_discount">Descuento: </string>
    <string name="cart_total_price">Total a pagar: </string>
    <string name="cart_confirm_payment">Realizar pago</string>
    <string name="cart_have_coupon">Cupón de descuento</string>
    <string name="neworder_burgers">Armala a tu gusto</string>
    <string name="neworder_meat">Carne</string>
    <string name="neworder_chicken">Pollo</string>
    <string name="neworder_vegan">Veganas</string>
    <string name="neworder_milkshake">Milkshakes</string>
    <string name="neworder_sundae">Sundaes</string>
    <string name="neworder_desserts">Postres BSB</string>
    <string name="neworder_all_desserts">Postres</string>
    <string name="neworder_beer">Cervezas</string>
    <string name="neworder_water">Aguas</string>
    <string name="neworder_soda">Gaseosas</string>
    <string name="neworder_flavored">Saborizadas</string>
    <string name="assemble_confirm">Confirmar hamburguesa</string>
    <string name="assemble_size">Talle</string>
    <string name="assemble_topping">Toppings</string>
    <string name="assemble_dressing">Aderezos y salsas</string>
    <string name="assemble_title">Hamburguesa %1$s</string>
    <string name="assemble_title_s">S</string>
    <string name="assemble_title_m">M</string>
    <string name="assemble_title_l">L</string>
    <string name="assemble_title_xl">XL</string>
    <string name="assemble_subtitle_s">(1 medallón 100gr)</string>
    <string name="assemble_subtitle_m">(2 medallones 100gr)</string>
    <string name="assemble_subtitle_l">(3 medallones 100gr)</string>
    <string name="assemble_subtitle_xl">(4 medallones 100gr)</string>
    <string name="dialog_quit_title">¿Deseas salir de la aplicación?</string>
    <string name="dialog_log_out">¿Deseas cerrar sesión?</string>
    <string name="dialog_return_login_title">¿Deseas volver al inicio?</string>
    <string name="dialog_return_profile_title">¿Deseas aplicar los cambios?</string>
    <string name="dialog_exit">Sí, deseo salir</string>
    <string name="dialog_out">Sí, deseo cerrar</string>
    <string name="dialog_accept">Aceptar</string>
    <string name="dialog_quantity">Cantidad</string>
    <string name="dialog_add">Añadir al carro</string>
    <string name="dialog_add_email">Ingresa tu email</string>
    <string name="dialog_forgot_pass">Reestablecer contraseña</string>
    <string name="dialog_error_reset_failed">"Error al enviar el correo"</string>
    <string name="dialog_reset_ok">Correo enviado exitosamente</string>
    <string name="dialog_add_product">Producto añadido al carrito</string>
    <string name="dialog_delete_product">Eliminar producto</string>
    <string name="dialog_delete_product_title">¿Deseas eliminar %1$d %2$s del carrito?</string>
    <string name="dialog_new_order">Tienes productos en el carrito, si vuelves al menú principal se descartarán los cambios. ¿Deseas regresar?</string>
    <string name="neworder_title">Armá tu pedido</string>
    <string name="neworder_confirm_shopping_cart">Continuar compra</string>
    <string name="neworder_shopping_cart_total">Total: $%1$d</string>
    <string name="status_payment_title_ok">¡Compra realizada con éxito!</string>
    <string name="status_payment_go_home">Volver al inicio</string>
    <string name="status_payment_go_my_orders">Ver mis pedidos</string>
    <string name="error_generic">¡Ha ocurrido un problema!</string>
    <string name="error_not_create_account">Por motivos desconocidos, no hemos podido crear la cuenta. Intenta nuevamente o inténtalo más tarde</string>
    <string name="error_go_to_login">Volver al inicio</string>
</resources>