<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient_white"
    tools:context=".presentation.fragment.payment.StatusFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/status_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_status_ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/status_txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/montserrat_regular"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/status_img"
        android:text="@string/status_payment_title_ok" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/status_txt_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/montserrat_regular"
        android:gravity="center"
        tools:text="Tu pago fue procesado con éxito. Aproximadamente, en 30 minutos, tu pedido va estar llegando a tu puerta."
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/status_txt_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/status_btn_go_my_orders"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/btn_gradient_white"
        android:fontFamily="@font/montserrat_regular"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/status_payment_go_my_orders"
        android:textColor="@color/red_extra_dark"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/status_btn_go_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/status_btn_go_home"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/btn_gradient_red_stroke_white"
        android:fontFamily="@font/montserrat_regular"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/status_payment_go_home"
        android:textColor="@color/white"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>